--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 
+<!DOCTYPE html>
+<html>
+    <header>
+        <h1>
+        Microphone
+        </h1>
+
+    </header>
+    <body>
+        This is a website about everything regarding microphones. 
+    </body>
+</html>
